--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/Joeyrsp/cad-n-d/issues"
   },
-  "homepage": "https://github.com/Joeyrsp/cad-n-d#readme"
+  "homepage": "https://github.com/Joeyrsp/cad-n-d#readme",
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@jest/globals": "^29.3.1",
+    "@types/jest": "^29.2.5",
+    "jest": "^29.3.1",
+    "testcontainers": "^9.1.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "pg": "^8.8.0"
+  }
 }
