--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 
 services:
   postgres:
     image: postgres:latest
     ports:
-      - '5432'
+      - "5432:5432"
     environment:
       - POSTGRES_USER=${user}
       - POSTGRES_PASSWORD=${password}
