--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.20.2",
     "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.5",
+    "@types/pg": "^8.6.6",
     "jest": "^29.3.1",
     "testcontainers": "^9.1.1",
     "ts-jest": "^29.0.5",
