--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "nearley": "nearleyc grammar.ne -o grammar.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@babel/preset-env": "^7.20.2",
     "@jest/globals": "^29.3.1",
     "@types/jest": "^29.2.5",
+    "@types/nearley": "^2.11.2",
     "@types/pg": "^8.6.6",
     "jest": "^29.3.1",
     "testcontainers": "^9.1.1",
@@ -28,6 +30,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "nearley": "^2.20.1",
     "pg": "^8.8.0"
   }
 }
